--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+altair = "^4.2.0"
+numpy = "^1.22.1"
+pandas = "^1.3.5"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
